--- a/templates/base.html
+++ b/templates/base.html
@@ -22,17 +22,52 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
           </li>
-                  </ul>
+          </li>
+          {% if user.is_authenticated %}
+          <li><a href="{% url 'post_create' %}" class="nav-link px-2 link-dark">+ New</a></li>
+        </ul>   
+        <div class="mr-auto">
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                {{ user.username }}
+              </a>
+              <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end">
+                <li><hr class="dropdown-divider"></li>
+                <li>
+                  <form method="post" action="{% url 'logout' %}" 
+                    style="display:inline;">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-link nav-link"
+                      style="display:inline; cursor:pointer; ">Logout</button>
+                  </form>
+                </li>
+              </ul>
+            </li>
+          {% else %}
+          </ul>
         </div>
+        <div class="mr-auto">
+          <form class="form d-flex">
+            <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
+            <a href="{% url 'signup' %}" class="btn btn-primary ms-2">Sign up</a>
+          </form>
+        </div>
+        {% endif %}
       </div>
     </div>
   </nav>
   <main>
     <div class="container">
+      <hr>
       {% block content %}
       {% endblock content %}
     </div>
   </main>
+  <footer>
+    <p style="text-align: center;">developed by Tarique N Faraz.</p>
+  </footer>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
