--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -4,6 +4,8 @@
 
 {% block content %}
 <h4>Latest</h4>
+<a class="btn btn-primary" href="{% url 'post_create' %}" role="button">Post Blog</a>
+<hr>
 {% for post in post_list %}
 <div class="card">
 	<div class= "card-header">
