--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,7 @@
                       style="display:inline; cursor:pointer; ">Logout</button>
                   </form>
                 </li>
+                <li><a class="dropdown-item nav-link" href="{% url 'password_change' %}" >Change Password</a></li>
               </ul>
             </li>
           {% else %}
