--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -4,8 +4,10 @@
 
 {% block content %}
 <h4>Latest</h4>
+{% if user.is_authenticated %}
 <a class="btn btn-primary" href="{% url 'post_create' %}" role="button">Post Blog</a>
 <hr>
+{% endif %}
 {% for post in post_list %}
 <div class="card">
 	<div class= "card-header">
